[gd_scene load_steps=8 format=3 uid="uid://crnbxevqymnn4"]

[ext_resource type="Script" path="res://Scripts/main_menu_script.gd" id="1_hc3k4"]
[ext_resource type="Texture2D" uid="uid://di3gtylimnkbr" path="res://Assets/Background/Background_Blured.png" id="1_xytwr"]
[ext_resource type="Texture2D" uid="uid://edokj13eha3s" path="res://Assets/Menu Items/Sweetie Dash Logo.png" id="2_l8aqy"]
[ext_resource type="PackedScene" uid="uid://dbjkghl4ou8jo" path="res://Scenes/play_button.tscn" id="3_7fqav"]
[ext_resource type="PackedScene" uid="uid://b6ava5dcnfmnf" path="res://Scenes/level_select_button.tscn" id="5_62wyx"]
[ext_resource type="PackedScene" uid="uid://dic6o6q24v7m8" path="res://Scenes/help_button.tscn" id="6_abd1r"]

[sub_resource type="GDScript" id="GDScript_3uagh"]
script/source = "extends TextureButton

@onready var buttonSFX = $ButtonSFX

func _on_pressed():
	buttonSFX.play()
	print(\"button sfx played\")
"

[node name="Main_Menu" type="Node"]
script = ExtResource("1_hc3k4")
version = 1.02

[node name="BG" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xytwr")
metadata/_edit_lock_ = true

[node name="SweetieDashLogo" type="TextureRect" parent="BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -648.0
offset_top = -496.0
offset_right = 632.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l8aqy")

[node name="Play_Button" parent="BG" instance=ExtResource("3_7fqav")]
layout_mode = 1
offset_left = -80.0
offset_top = 24.0
offset_right = 380.0
offset_bottom = 250.0

[node name="Level_Select_Button" parent="BG" instance=ExtResource("5_62wyx")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 232.0
offset_right = 380.0
offset_bottom = 458.0
script = SubResource("GDScript_3uagh")

[node name="Help_Button" parent="BG" instance=ExtResource("6_abd1r")]
layout_mode = 1
offset_left = 560.0
offset_top = 488.0
offset_right = 1020.0
offset_bottom = 714.0
script = SubResource("GDScript_3uagh")

[node name="VersionText" type="Label" parent="."]
offset_left = 8.0
offset_top = 688.0
offset_right = 75.0
offset_bottom = 711.0
text = "Version: 0"

[connection signal="pressed" from="BG/Play_Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="BG/Level_Select_Button" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="BG/Help_Button" to="." method="_on_help_button_pressed"]
